@startuml

package "貸出管理" {

  entity BookStock {
    * id
    --
    * book_id (FK: Book(id))
    * status (FK: BookStatus(id))
    memo
  }

  entity BookStockStatus {
    * id
    --
    * name
  }

  note bottom: 貸出可能, 貸出不可, 破棄\n図書館の実務的には「貸出不可」を細分化すべきかもしれない？

  entity Customer {
    * id
    --
    * name
    * email_address
  }

  entity Lending {
    * id
    --
    * lending_set_id (FK: LendingSet(id))
    * book_stock_id (FK: BookStock(id))
  }

  entity LendingSet {
    * id
    --
    * customer_id (FK: Customer(id))
    * LendingSetStatus (FK: LendingStatus(id))
    * lend_start_date
    * return_deadline_date
      return_date
      memo
  }

  entity LendingStatus {
    * id
    --
    * name
  }

  note bottom: 貸出中, 貸出期限超過, 返却済み

}

package "書籍管理" {

  entity NdcCategory {
    * id
    --
    * name
    * number
  }

  entity BookMaster {
    * id
    --
    * ISBN (UNIQUE)
    * title
    * publication_date
    * category(FK: NdcCategory(id))
  }

  entity Author {
    * id
    --
    * name
  }

  entity BookAuthorRelationship {
    * id
    --
    * book_id (FK:Book(id))
    * author_id (FK:Author(id))
  }

}

BookMaster ||-{ BookAuthorRelationship
BookMaster }o--|| NdcCategory
BookAuthorRelationship }-|| Author

BookStock }o-|| BookMaster
Lending }o-|{ BookStock
LendingSet }o-- Customer

BookStock }o--|| BookStockStatus
Lending }|--|| LendingSet
LendingStatus - LendingSet

"貸出管理" -[hidden]- "書籍管理"

entity "<テーブル名>" {
  * 主キー
  --
  カラム
  * 必須カラム
}

@enduml
